Fix CSS gap on tiles

--- a/css/main.css
+++ b/css/main.css
@@ -259,6 +259,7 @@ h3 {
 
 .gameTile {
   position: relative;
+  display: block;
   border: 0;
   padding: 0;
   margin: 0.75rem;
@@ -273,6 +274,7 @@ h3 {
 .tileLayer {
   position: relative;
   width: 150px;
+  display: block;
 }
 
 .tokenLayer {
